# ninjas2

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  Makefile  Makefile copy  Makefile.mk  README.md  arch-linux.dockerfile  common.env  crossbuild.dockerfile  docker-script-ubuntu.sh  ninjas2.desktop  ninjas2.kdev4  ubuntu-linux.dockerfile  windows.sh
.github/: FUNDING.yml
.github/workflows/: cmake.yml
.travis/: script-linux.sh  script-macos.sh  script-mingw.sh
Resources/: ninjas2.carxp
Resources/Ninjas2/: Makefile
Resources/Ninjas2/Widgets/: LabelContainer.hpp  NanoButton.hpp  NanoSpinner.hpp
Resources/Ninjas2/Widgets/src/: NanoSpinner.cpp
aubio/: Makefile
aubio/src/: config.h
plugins/: Makefile.mk
plugins/Ninjas2/: DistrhoPluginInfo.h  EnvelopeGenerator.cpp  ExtraEventHandlers.cpp  ExtraEventHandlers.hpp  Makefile  Ninjas2ElementsTable.hpp  Ninjas2Plugin.cpp  Ninjas2Plugin.hpp  Ninjas2Resources.cpp  Ninjas2Resources.hpp  Ninjas2UI.cpp  Ninjas2UI.hpp  README.md  png2nanorgba.py
plugins/Ninjas2/Resources/: GPL_V3_Tag  fontawesome_ttf.cpp  fontawesome_ttf.hpp  ninjas2.carxp  ninjas2.json
plugins/Ninjas2/Structures/: Animation.hpp  Layout.hpp
plugins/Ninjas2/Structures/src/: Animation.cpp  Layout.cpp
plugins/Ninjas2/Utils/: Mathf.hpp
plugins/Ninjas2/Utils/src/: Mathf.cpp  SVGUtils.cpp
plugins/Ninjas2/Widgets/: ArrowButton.hpp  BipolarModeSwitch.hpp  DropShadow.hpp  FilePathBox.hpp  GlowingLabelsBox.hpp  GraphNode.hpp  GraphWidget.hpp  LabelBox.hpp  LabelBoxList.hpp  LabelContainer.hpp  MixerSlider.hpp  MixerStrip.hpp  MixerSwitch.hpp  MixerTrackName.hpp  MyKnob.hpp  NanoButton.hpp  NanoKnob.hpp  NanoLabel.hpp  NanoMeter.hpp  NanoSlider.hpp  NanoSpinBox.hpp  NanoSwitch.hpp  NanoWheel.hpp  OversampleWheel.hpp  PianoKeyboard.hpp  PlayModeSwitch.hpp  RemoveDCSwitch.hpp  ResetGraphButton.hpp  ResizeHandle.hpp  RightClickMenu.hpp  SliceModeSwitch.hpp  SpinBox.hpp  Spinner.hpp  StateSwitch.hpp  TextButton.hpp  VolumeKnob.hpp  WidgetBar.hpp  WolfWidget.hpp
plugins/Ninjas2/Widgets/src/: ArrowButton.cpp  BipolarModeSwitch.cpp  DropShadow.cpp  FilePathBox.cpp  GlowingLabelsBox.cpp  GraphNode.cpp  GraphWidget.cpp  LabelBox.cpp  LabelBoxList.cpp  LabelContainer.cpp  MixerSlider.cpp  MixerStrip.cpp  MixerSwitch.cpp  MixerTrackName.cpp  MyKnob.cpp  NanoButton.cpp  NanoKnob.cpp  NanoLabel.cpp  NanoMeter.cpp  NanoSlider.cpp  NanoSpinBox.cpp  NanoSwitch.cpp  NanoWheel.cpp  OversampleWheel.cpp  PianoKeyboard.cpp  PlayModeSwitch.cpp  RemoveDCSwitch.cpp  ResetGraphButton.cpp  ResizeHandle.cpp  RightClickMenu.cpp  SliceModeSwitch.cpp  SpinBox.cpp  SpinBox.cpp.bak  StateSwitch.cpp  TextButton.cpp  VolumeKnob.cpp  WidgetBar.cpp  WolfWidget.cpp
src/: AubioConfig.h.in  DistrhoPluginInfo.h  EnvelopeGenerator.h  Ninjas2Plugin.cpp  Ninjas2Plugin.hpp  Ninjas2UI.cpp  Ninjas2UI.hpp  fonts.cpp  fonts.hpp  open-color1_9_1.hpp
src/widgets/: Knob.hpp  NanoLabel.hpp  PianoKeyboard.hpp  PlayModeSwitch.hpp  Radio.hpp  Spinner.hpp  TextButton.hpp
src/widgets/src/: Knob.cpp  NanoLabel.cpp  PianoKeyboard.cpp  PlayModeSwitch.cpp  Radio.cpp  SliceModeSwitch.cpp  Spinner.cpp  TextButton.cpp
